# home-assistant-candy

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  hacs.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.test.txt  requirements.txt  requirements_test.txt
.github/: changelog_config.json
.github/workflows/: lint.yml  periodic_validation.yml  release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/candy/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/candy/client/: __init__.py  decryption.py  model.py
custom_components/candy/translations/: ca.json  en.json  es.json  fr.json  it.json  pt.json  ru.json  ua.json
scripts/: clean  develop  setup
tests/: __init__.py  common.py  conftest.py  test_client.py  test_config_flow.py  test_decryption.py  test_sensor_dishwasher.py  test_sensor_oven.py  test_sensor_tumble_dryer.py  test_sensor_washing_machine.py
tests/components/dishwasher/fixtures/: drying_optional_params.json  idle.json  wash.json  wash_no_opzprog.json
tests/components/oven/fixtures/: heating.json  idle.json  no_timeprogr.json
tests/components/tumble_dryer/fixtures/: idle.json  running.json
tests/components/washing_machine/fixtures/: delayed_start_wait.json  idle.json  no_fillr.json  no_pr.json  running_wash.json  statistics.json
tools/: agents.md  simplyfi.py
